[package]
name = "rustdds_interop_test"
version = "0.5.0"
authors = ["Juhana Helovuo <juhe@iki.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
rustdds = { version = "0.6" }
#rustdds = { path ="../../RustDDS" }
serde = { version="1", features=["derive"] }
ctrlc = "3"
mio = "0.6"
mio-extras = "2"
log = "0.4"
log4rs = "1"
rand = "0.8"

