[package]
name = "hdds_shape_main_linux"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "OMG DDS-RTPS Interoperability"
authors = ["Olivier Esteve <olivier@naskel.com>"]
repository = "https://github.com/hdds-team/hdds"
publish = false
readme = false

[[bin]]
name = "shape_main"
path = "src/main.rs"

[dependencies]
hdds = "1.1"

[profile.release]
opt-level = 3
lto = true
strip = "debuginfo"
